# Smriti

./: .env.prod.example  .gitignore  .mcp.json  .pre-commit-config.yaml  AUDIT_MAP.md  DISCONNECTED_FUNCTIONS.md  Makefile  PROGRESS.md  RALPH_LOOP_README.md  README.md  SMRITI_REFACTOR_PRD.md  case.json  cid.txt  docker-compose.prod.yml  docker-compose.yml  progress.txt  ralph_loop_config.json  ralph_loop_runner.sh  ralph_loop_scanner.py  s2.json  search_result.json  suggest.json
backend/: .dockerignore  .env.example  .env.prod.example  .gcloudignore  Dockerfile  Dockerfile.worker  alembic.ini  cloudbuild-worker.yaml  pyproject.toml
backend/.claude/: ralph-ingestion-state.md
backend/app/: main.py  worker.py
backend/app/api/routes/: admin_audit.py  admin_corrections.py  admin_review.py  admin_users.py  agents.py  audio.py  auth.py  cases.py  chat.py  counsel.py  data_quality.py  documents.py  dpdp.py  graph.py  health.py  ingest.py  judges.py  preferences.py  search.py  sharing.py  users.py
backend/app/core/: config.py  dependencies.py  logging_config.py  middleware.py
backend/app/core/agents/: case_prep.py  checkpointer.py  confidence.py  drafting.py  follow_up.py  research.py  research_cache.py  routing_utils.py  state.py  strategy.py
backend/app/core/analysis/: __init__.py  document_analyzer.py  precedent_mapper.py
backend/app/core/analytics/: __init__.py  counsel_analytics.py  judge_analytics.py  judge_prediction.py
backend/app/core/chat/: rag.py
backend/app/core/drafting/: court_profiles.py  document_parser.py  export.py  (+3 more)
backend/app/db/: postgres.py  redis_client.py
backend/app/models/: __init__.py  agent_execution.py  agent_session.py  audio_digest.py  audit.py  base.py  case.py  case_citation_equivalent.py  case_section.py  case_statute_interpretation.py  chat.py  consent.py  document.py  document_analysis.py  search_history.py  shared_memo.py  statute.py  user.py
backend/app/security/: __init__.py  audit.py  auth.py  consent.py  encryption.py  exceptions.py  rate_limiter.py  rbac.py  sanitizer.py
backend/app/tasks/: __init__.py  audio_tasks.py  document_tasks.py
backend/migrations/: env.py
backend/migrations/versions/: 001_initial.py  002_documents_audio.py  003_citation_equivalents.py  004_case_sections.py  005_agent_executions.py  006_indexes_and_performance.py  007_dpdp_compliance.py  008_strategy_drafting_agents.py  009_ingestion_improvements.py  010_weighted_fts.py  011_legal_completeness.py  012_search_excellence.py  013_enterprise_readiness.py  014_fix_triggers_and_constraints.py  015_graph_build_queue.py  015_india_audit_fixes.py  016_india_audit_fixes.py  017_pgvector_and_citations.py  018_low_audit_fixes.py  018_medium_audit_indexes.py  019_medium_audit_indexes.py  020_create_statutes_table.py  021_statutes_updated_at.py  022_fix_constraints_and_types.py  023_ingestion_v2_fields.py  024_fix_fts_trigger_v2.py  025_fix_fts_trigger_v3.py  026_statutes_amendment_fields.py  027_pg_trgm_fuzzy_search.py  028_coram_size.py  029_schema_hardening.py  030_amendment_maps.py  032_fts_trigger_optimization.py  033_text_hash_unique_index.py  034_ingestion_status_index.py  035_ingestion_v3_fields.py  036_agent_conversation_history.py  037_shared_memos.py  038_user_preferences.py  039_add_primary_legal_issue.py
backend/scripts/: audit_all_cases.py  audit_metadata_quality.py  audit_migration.py  audit_models_vs_db.py  audit_today_ingestion.py  audit_trial_run.py  backfill_contextual_embeddings.py  backfill_ingestion_quality.py  backfill_llm_metadata.py  backfill_missing_vectors.py  backfill_pinecone_metadata.py  batch_ingest.py  batch_ingest_vertex.py  batch_llm.py  batch_state.py  benchmark_extraction.py  build_citation_communities.py  check_batch_ab_test.py  cleanup_metadata.py  compute_graph_analytics.py  convert_local_pdfs.py  daily_ingest.py  download_and_convert_statutes.py  e2e_research_pipeline.py  e2e_test_apis.py  enrich_pro.py  generate_statute_json.py  ingest_s3.py  ingest_statutes.py  migrate_graph_properties.py  monitor_ingestion.py  normalize_acts_cited.py  poll_batch_test.py  populate_neo4j.py  purge_bad_cases.py  quality_eval.py  reingest_trial_cases.py  repair_ingestion_data.py  reset_all_data.py  resume_phase3.py  (+5 more)
backend/tests/: conftest.py
backend/tests/fixtures/: gold_standard_metadata.json
backend/tests/integration/: test_ingestion.py  test_search.py  test_search_accuracy.py
backend/tests/load/: locustfile.py
backend/tests/quality/: conftest.py  test_agent_quality.py  test_metadata_benchmark.py  test_search_accuracy.py
backend/tests/security/: test_jwt_claims.py  test_security.py
backend/tests/unit/: test_35k_hardening.py  test_acts_normalization.py  test_admin_routes.py  test_agent_execution_model.py  test_agent_graph_execution.py  test_agent_nodes_common.py  test_agent_prompts.py  test_agent_routes.py  test_agent_session_routes.py  test_agent_state.py  test_amendment_service.py  test_anonymizer.py  test_audio_routes.py  test_audio_tasks.py  test_audit_logging.py  test_auth.py  test_auth_routes.py  test_batch_llm.py  test_batch_state.py  test_bulk_upsert.py  test_case_model_v2.py  test_case_prep_agent.py  test_case_prep_nodes.py  test_case_routes.py  test_case_section_model.py  test_celery_config.py  test_chat_routes.py  test_checkpointer.py  test_chunker.py  test_circuit_breaker.py  test_citation_equivalence.py  test_citation_equivalent_model.py  test_citation_formats.py  test_citation_verifier.py  test_cited_by_count.py  test_classify_treatment_llm.py  test_common_nodes.py  test_concurrent_ingestion.py  test_confidence_scoring.py  test_config_pool.py  (+114 more)
backend/trial_reports/: delete_ids.json  keep_ids.json  metadata_audit_dump.json  missing_vectors.json  strategy_agent_test.json  trial_20260329_200012_case_ids.json  trial_20260329_200030_case_ids.json  trial_20260329_200046_case_ids.json  trial_20260329_200316_case_ids.json  trial_20260329_220648_case_ids.json  trial_20260329_220728.json  trial_20260329_222207.json  trial_20260330_042450_case_ids.json  trial_20260330_183217.json  trial_20260331_062811_case_ids.json
(+464 files in other folders)
