[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "smriti"
version = "0.1.0"
description = "AI-powered Indian legal research platform"
requires-python = ">=3.12"
dependencies = [
    # Web framework
    "fastapi==0.115.6",
    "uvicorn[standard]==0.34.0",
    "python-multipart==0.0.18",

    # Database
    "sqlalchemy[asyncio]==2.0.36",
    "asyncpg==0.30.0",
    "alembic==1.14.1",
    "greenlet==3.1.1",

    # Redis
    "redis[hiredis]==5.2.1",

    # Auth & Security
    "pyjwt==2.10.1",
    "bcrypt==4.2.1",
    "cryptography==44.0.0",

    # AI/ML
    "google-genai==1.5.0",
    "pinecone==5.4.2",
    "cohere==5.13.3",
    "neo4j==5.27.0",

    # PDF Processing
    "pdfplumber==0.11.4",
    "pytesseract==0.3.13",
    "pdf2image==1.17.0",

    # Data
    "pyarrow==18.1.0",
    "pandas==2.2.3",

    # Settings & Validation
    "pydantic==2.10.4",
    "pydantic-settings==2.7.1",

    # HTTP Client
    "httpx==0.28.1",

    # Logging
    "structlog==24.4.0",

    # Cloud Storage
    "google-cloud-storage==2.19.0",

    # AWS (S3 dataset download)
    "boto3==1.35.86",
]

[project.optional-dependencies]
dev = [
    "pytest==8.3.4",
    "pytest-asyncio==0.25.0",
    "pytest-cov==6.0.0",
    "pytest-mock==3.14.0",
    "httpx==0.28.1",
    "ruff==0.8.6",
    "mypy==1.14.1",
    "pre-commit==4.0.1",
    "aiosqlite==0.20.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "N",    # pep8-naming
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "S",    # flake8-bandit (security)
    "T20",  # flake8-print
    "SIM",  # flake8-simplify
    "TCH",  # flake8-type-checking
    "RUF",  # ruff-specific
]
ignore = [
    "S101",  # assert allowed in tests
    "S105",  # hardcoded password detection (false positives in tests)
    "S106",  # hardcoded password detection
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S101", "S105", "S106"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = [
    "pdfplumber.*",
    "pytesseract.*",
    "neo4j.*",
    "pinecone.*",
    "cohere.*",
    "google.*",
    "boto3.*",
    "botocore.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "integration: marks tests as integration tests (deselect with '-m \"not integration\"')",
    "security: marks tests as security tests",
]
