[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "smriti"
version = "0.1.0"
description = "AI-powered Indian legal research platform"
requires-python = ">=3.12"
dependencies = [
    # Web framework
    "fastapi==0.115.6",
    "uvicorn[standard]==0.34.0",
    "python-multipart==0.0.18",

    # Database
    "sqlalchemy[asyncio]==2.0.36",
    "asyncpg==0.30.0",
    "alembic==1.14.1",
    "greenlet==3.1.1",

    # Redis
    "redis[hiredis]==5.2.1",

    # Task queue
    "celery[redis]==5.4.0",

    # Auth & Security
    "pyjwt==2.10.1",
    "bcrypt==4.2.1",
    "cryptography==44.0.0",

    # AI/ML
    "google-genai==1.5.0",
    "pinecone==5.4.2",
    "cohere==5.13.3",
    "neo4j==5.27.0",

    # Agent framework (pinned — pre-1.0 LangGraph has breaking minor releases)
    "langgraph==0.6.11",
    "langgraph-checkpoint-postgres==2.0.25",
    "psycopg[binary]==3.3.3",
    "psycopg-pool==3.3.0",

    # PDF Processing
    "pdfplumber==0.11.4",
    "pdfminer.six>=20221105",
    "pytesseract==0.3.13",
    "pdf2image==1.17.0",

    # Document Export
    "python-docx>=1.1.0",
    "reportlab>=4.0",

    # Graph algorithms
    "networkx>=3.0",

    # Data
    "pyarrow==18.1.0",
    "pandas==2.2.3",

    # Settings & Validation
    "pydantic[email]==2.10.4",
    "pydantic-settings==2.7.1",

    # HTTP Client
    "httpx==0.28.1",

    # Retry logic
    "tenacity>=8.2,<10.0",

    # Cloud Storage
    "google-cloud-storage==2.19.0",
    "sentry-sdk[fastapi]==2.20.0",
]

[project.optional-dependencies]
dev = [
    "pytest==8.3.4",
    "pytest-asyncio==0.25.0",
    "pytest-cov==6.0.0",
    "pytest-mock==3.14.0",
    "ruff==0.8.6",
    "mypy==1.14.1",
    "pre-commit==4.0.1",
    "aiosqlite==0.20.0",
    "locust>=2.20",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "N",    # pep8-naming
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "S",    # flake8-bandit (security)
    "T20",  # flake8-print
    "SIM",  # flake8-simplify
    "TCH",  # flake8-type-checking
    "RUF",  # ruff-specific
]
ignore = [
    # S105/S106 (hardcoded password detection) are active globally.
    # S101 (assert) is only suppressed in tests via per-file-ignores.
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S101", "S105", "S106"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = [
    "pdfplumber.*",
    "pytesseract.*",
    "neo4j.*",
    "pinecone.*",
    "cohere.*",
    "google.*",
    "docx.*",
    "reportlab.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "integration: marks tests as integration tests (deselect with '-m \"not integration\"')",
    "security: marks tests as security tests",
]
