[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "smriti"
version = "0.1.0"
description = "AI-powered Indian legal research platform"
requires-python = ">=3.12"
dependencies = [
    # Web framework
    # fastapi>=0.124 allows starlette>=0.49 which patches CVE-2025-54121
    # and CVE-2025-62727. We also add an explicit starlette floor because
    # fastapi's own starlette range is loose and pip resolved to 0.48.0
    # (vulnerable) without it.
    "fastapi>=0.124,<0.136",
    "starlette>=0.49.1",
    "uvicorn[standard]==0.34.0",
    "python-multipart>=0.0.22",  # CVE-2026-24486 path traversal

    # Database
    "sqlalchemy[asyncio]==2.0.36",
    "asyncpg==0.30.0",
    "alembic==1.14.1",
    "greenlet==3.1.1",

    # Redis
    "redis[hiredis]==5.2.1",

    # Task queue
    "celery[redis]==5.4.0",

    # Auth & Security
    "pyjwt>=2.12.0",              # CVE-2026-32597 crit header bypass
    "bcrypt==4.2.1",
    "cryptography>=46.0.6",       # CVE-2024-12797, CVE-2026-26007, CVE-2026-34073

    # AI/ML
    "google-genai==1.5.0",
    "pinecone==5.4.2",
    "cohere==5.13.3",
    "neo4j==5.27.0",

    # Agent framework
    # Bumped langgraph to >=1.0.10 for CVE-2026-28277 fix, and
    # langgraph-checkpoint to >=4.0.0 for CVE-2025-64439 (RCE via JSON
    # fallback) + CVE-2026-27794 (RCE via pickle cache fallback).
    "langgraph>=1.0.10,<2.0",
    "langgraph-checkpoint-postgres>=3.0.0",
    "psycopg[binary]==3.3.3",
    "psycopg-pool==3.3.0",

    # PDF Processing
    # pdfplumber 0.11.4 pins pdfminer.six==20231228; bump to 0.11.9
    # which accepts newer pdfminer versions with CVE fixes.
    "pdfplumber>=0.11.9",
    "pdfminer.six>=20251230",     # CVE-2025-70559 pickle RCE
    "pytesseract==0.3.13",
    "pdf2image==1.17.0",

    # Document Export
    "python-docx>=1.1.0",
    "reportlab>=4.0",

    # Graph algorithms
    "networkx>=3.0",
    "python-louvain>=0.16",
    "scipy>=1.11",  # required by networkx.pagerank()

    # Data
    "pyarrow==18.1.0",
    "pandas==2.2.3",

    # Settings & Validation
    "pydantic[email]==2.10.4",
    "pydantic-settings==2.7.1",

    # HTTP Client
    "httpx==0.28.1",

    # Retry logic
    "tenacity>=8.2,<10.0",

    # Cloud Storage
    "google-cloud-storage==2.19.0",
    "sentry-sdk[fastapi]==2.20.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0.3",              # CVE-2025-71176
    "pytest-asyncio>=0.25.0",
    "pytest-cov>=6.0.0",
    "pytest-mock>=3.14.0",
    "pytest-timeout>=2.3.0",      # per-test hang protection
    "ruff==0.8.6",
    "mypy==1.14.1",
    "pre-commit==4.0.1",
    "aiosqlite==0.20.0",
    "locust>=2.20",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "N",    # pep8-naming
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "S",    # flake8-bandit (security)
    "T20",  # flake8-print
    "SIM",  # flake8-simplify
    "TCH",  # flake8-type-checking
    "RUF",  # ruff-specific
]
ignore = [
    # S105/S106 (hardcoded password detection) are active globally.
    # S101 (assert) is only suppressed in tests via per-file-ignores.

    # FastAPI uses `Depends()`, `Query()`, `Body()` in default args by
    # design — this is the framework's canonical pattern.
    "B008",

    # E501: ruff format handles line wrapping. Residual E501 lines are
    # long string literals / URLs / SQL that shouldn't be broken.
    "E501",

    # RUF001/002/003: ambiguous unicode chars. Indian legal corpora mix
    # English with Devanagari and em-dashes — these are intentional.
    "RUF001",
    "RUF002",
    "RUF003",

    # S608: hardcoded SQL strings. We use SQLAlchemy text() with bound
    # parameters — not concatenation. The rule's heuristic is too coarse
    # to distinguish safe text() from f-string SQL.
    "S608",

    # S110: try/except/pass is legitimate defensive cleanup (close
    # connections on shutdown, fire-and-forget cache writes, etc).
    "S110",

    # S311: non-cryptographic random is fine for jitter, IDs, tests.
    "S311",

    # S101: asserts are used for internal invariants, not runtime checks.
    "S101",

    # B904: re-raising HTTPException after catching an internal error is
    # the canonical FastAPI pattern; `from exc` chaining just adds noise
    # in stack traces that users never see.
    "B904",

    # N806: ALL_CAPS constants declared inside functions (e.g. BATCH_SIZE,
    # TIMEOUT). Legitimate and idiomatic; no need to hoist every one to
    # module level.
    "N806",

    # N803: argument naming. We occasionally accept non-snake_case names
    # to match external protocols (DB columns, Pinecone fields, etc).
    "N803",

    # N802/N818: function & exception class naming diverges occasionally
    # for framework compatibility (pytest test_CamelCase, domain errors).
    "N802",
    "N818",

    # E402: module-level imports after code. Used for circular-import
    # workarounds and conditional platform imports.
    "E402",

    # SIM102/105/108/117: stylistic simplifications (collapse if, suppress
    # exception, use ternary, merge with-statements). Often less readable
    # than the explicit version.
    "SIM102",
    "SIM105",
    "SIM108",
    "SIM117",
]

[tool.ruff.lint.per-file-ignores]
# Tests can assert freely and include dummy creds
"tests/**" = ["S101", "S105", "S106", "S108", "B017", "N806", "F841"]

# Alembic auto-generated migrations use module-level imports + long
# column definitions + non-snake-case class names
"migrations/**" = ["E402", "N806", "N801", "F401"]

# CLI scripts print by design and often do module-level side effects
"scripts/**" = ["T201", "T203", "E402", "S603", "S607"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = [
    "pdfplumber.*",
    "pytesseract.*",
    "neo4j.*",
    "pinecone.*",
    "cohere.*",
    "google.*",
    "docx.*",
    "reportlab.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "integration: marks tests as integration tests (deselect with '-m \"not integration\"')",
    "security: marks tests as security tests",
]
